--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,8 @@
     "permissions": [
         "webNavigation",
         "tabs",
-        "<all_urls>"
+        "<all_urls>",
+        "storage"
     ],
     "version": "0.1",
     "background": {
